# serializer version: 1
# name: test_SAFMN_DF2K_x2
  ImageModelDescriptor(
    architecture=SAFMNArch(
      id='SAFMN',
      name='SAFMN',
    ),
    input_channels=3,
    model_bytes=911280,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '36dim',
      '8nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_SAFMN_DF2K_x3
  ImageModelDescriptor(
    architecture=SAFMNArch(
      id='SAFMN',
      name='SAFMN',
    ),
    input_channels=3,
    model_bytes=930780,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '36dim',
      '8nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_SAFMN_DF2K_x4
  ImageModelDescriptor(
    architecture=SAFMNArch(
      id='SAFMN',
      name='SAFMN',
    ),
    input_channels=3,
    model_bytes=958080,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=0, multiple_of=8, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      '36dim',
      '8nb',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
